manifest/appr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appr
  namespace: insahi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insahi-appr
  template:
    metadata:
      labels:
        app: insahi-appr
    spec:
      containers:
        - name: appr
          image: daul0519/electronicepproval-service:1.2
          ports:
            - containerPort: 1005
---


apiVersion: v1
kind: Service
metadata:
  name: appr-service
  namespace: insahi

spec:
  type: LoadBalancer
  selector:
    app: insahi-appr

  ports:
    - port: 1005
      targetPort: 1005
