manifest/atdsal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atdsal
  namespace: insahi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insahi-atdsal
  template:
    metadata:
      labels:
        app: insahi-atdsal
    spec:
      containers:
        - name: atdsal
          image: daul0519/atdsal-service:2.4
          ports:
            - containerPort: 1000
---


apiVersion: v1
kind: Service
metadata:
  name: atdsal-service
  namespace: insahi

spec:
  type: ClusterIP
  selector:
    app: insahi-atdsal

  ports:
    - port: 1000
      targetPort: 1000
