manifest/cabinet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cabinet
  namespace: insahi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insahi-cabinet
  template:
    metadata:
      labels:
        app: insahi-cabinet
    spec:
      containers:
        - name: cabinet
          image: daul0519/cabinet-service:1.2
          ports:
            - containerPort: 1002
---


apiVersion: v1
kind: Service
metadata:
  name: cabinet-service
  namespace: insahi

spec:
  type: ClusterIP
  selector:
    app: insahi-cabinet

  ports:
    - port: 1002
      targetPort: 1002
