manifest/hrm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrm
  namespace: insahi
spec:
  replicas: 1
  selector:
    matchLabels:
      project: insahi
  template:
    metadata:
      labels:
        project: insahi
    spec:
      containers:
        - name: equipment
          image: jahee24/hrm-service:1.2
          ports:
            - containerPort: 1010
---

apiVersion: v1
kind: Service
metadata:
  name: hrm-service
  namespace: insahi

spec:
  type: LoadBalancer
  selector:
    project: insahi

  ports:
    - port: 1010
      targetPort: 1010
